--- a/src/app/app-form/app-form.component.html
+++ b/src/app/app-form/app-form.component.html
@@ -9,14 +9,14 @@
             <div class="mb-3 form-group">
                 <div ng-app="applicationType" ng-controller="myCtrl">
                     <label for="applicationType">Application Type</label>
-                    <select name="applicationType" id="applicationType" ng-model="selectApplicationType">
+                    <select name="applicationType" id="applicationType" ng-model="selectApplicationType" class="custom-select d-block w-100">
                     <!-- <option ng-repeat="let applicationType of applicationTypes" value="{{applicationType.value}}">{{applicationType,label}}</option> -->
                         <option>Select Application Type</option>
                         <option value="home">Home Loan</option>
                         <option value="business">Business Loan</option>
                         <option value="personal">Personal Loan</option>
                     </select>
-                    </div>
+                </div>
             </div>
             <div class="mb-3 form-group">
                 <label for="amount">Amount</label>
@@ -47,6 +47,7 @@
                   </div>
                 </div>
             </div>
+            <h4 class="mb-3">Applicant Details</h4>
             <div class="row form-group">
                 <div class="col-md-6 mb-3">
                     <label for="firstName">First Name</label>
@@ -56,6 +57,34 @@
                     <label for="lastName">Last Name</label>
                     <input id="lastName" type="text" class="form-control">
                 </div>
+            </div>
+            <div class="mb-3 form-group">
+                <div ng-app="gender" ng-controller="myCtrl">
+                    <label for="gender">Gender</label>
+                    <select name="gender" id="gender" ng-model="selectGender" class="custom-select d-block w-100">
+                        <option>Select Gender</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="na">Not Disclosed</option>
+                    </select>
+                </div>
+            </div>
+            <div class="mb-3 form-group">
+                Applicant ID Type
+                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-info active">
+                      <input type="radio" name="options" id="option1" autocomplete="off" checked>Australian Passport
+                    </label>
+                    <label class="btn btn-info">
+                      <input type="radio" name="options" id="option2" autocomplete="off"> Driver License
+                    </label>
+                    <label class="btn btn-info">
+                      <input type="radio" name="options" id="option3" autocomplete="off"> Foreign Passport
+                    </label>
+                    <label class="btn btn-info">
+                        <input type="radio" name="options" id="option3" autocomplete="off"> Foreign ID Card
+                      </label>
+                  </div>
             </div>
             <button class="btn btn-primary">Submit</button>
         </form>
